@@ -2103,10 +2103,14 @@ record_printer_options(const char *printer) {
   ipp_t *request, *response;
   ipp_attribute_t *attr;
   const char *key;
-  char valuebuffer[65536];
+  char buf[65536];
   const char *ppdname;
   ppd_file_t *ppd;
+  ppd_attr_t *ppd_attr;
   ppd_option_t *ppd_opt;
+  int num_options = 0;
+  cups_option_t *options = NULL, *option;
+  int i, ipp_printer;
   /* List of IPP attributes to get recorded */
   static const char *attrs_to_record[] =
                 {
@@ -2144,44 +2148,20 @@ record_printer_options(const char *printer) {
   debug_printf("Recording printer options for %s to %s\n",
 	       printer, filename);
 
-  httpAssembleURIf(HTTP_URI_CODING_ALL, uri, sizeof(uri), "ipp", NULL,
-		   "localhost", 0, "/printers/%s", printer);
-  resource = uri + (strlen(uri) - strlen(printer) - 10);
-  request = ippNewRequest(IPP_OP_GET_PRINTER_ATTRIBUTES);
-  ippAddString(request, IPP_TAG_OPERATION, IPP_TAG_URI, "printer-uri", NULL,
-	       uri);
-  response = cupsDoRequest(CUPS_HTTP_DEFAULT, request, resource);
-
-  fp = fopen(filename, "w+");
-  if (fp == NULL) {
-    debug_printf("ERROR: Failed creating file %s\n",
-		 filename);
-    ippDelete(response);
-    return -1;
-  }
-
-  /* Write all supported printer attributes */
-  attr = ippFirstAttribute(response);
-  while (attr) {
-    key = ippGetName(attr);
-    for (ptr = attrs_to_record; *ptr; ptr++)
-      if (strcasecmp(key, *ptr) == 0 ||
-	  (*ptr[0] == '*' &&
-	   strcasecmp(key + strlen(key) - strlen(*ptr) + 1, *ptr + 1) == 0))
-	break;
-    if (*ptr != NULL) {
-      if (strcasecmp(key, CUPS_BROWSED_DEST_PRINTER "-default") != 0) {
-	fprintf (fp, "%s=", key);
-	ippAttributeString(attr, valuebuffer, sizeof(valuebuffer));
-	fprintf (fp, "%s\n", valuebuffer);
-      }
-    }
-    attr = ippNextAttribute(response);
-  }
-
   /* If there is a PPD file for this printer, either local for IPP network
      printers or on the remote CUPS server for remote CUPS printers, we
-     save the local settings for the PPD options. */
+     save the local settings for the PPD options.
+
+     If the queue is pointing to one or more remote CUPS queues usually
+     the PPD comes from the server or it is provided locally only
+     if the implicitclass backend is used. In this case we cannot manage
+     option settings in the PPD file, therefore we suffix the options
+     with "-default" so that they go into /etc/cups/printers.conf when
+     loaded next time 
+
+     Discovered native IPP printers on the network have a permanent PPD
+     generated by cups-browsed, so we can keep the PPD options in the PPD
+     and do not add the "-default" suffix. */
   if ((ppdname = cupsGetPPD(printer)) == NULL) {
     debug_printf("Unable to get PPD file for %s: %s\n",
 		 printer, cupsLastErrorString());
@@ -2190,20 +2170,71 @@ record_printer_options(const char *printer) {
     debug_printf("Unable to open PPD file for %s.\n",
 		 printer);
   } else {
+    ipp_printer =
+      ((ppd_attr = ppdFindAttr(ppd, "NickName", NULL)) != NULL &&
+       strstr(ppd_attr->value, "cups-filters") != NULL &&
+       strncmp(ppd_attr->value, "Cluster of ", 11));
     ppdMarkDefaults(ppd);
-
     for (ppd_opt = ppdFirstOption(ppd); ppd_opt; ppd_opt = ppdNextOption(ppd))
-      if (strcasecmp(ppd_opt->keyword, "PageRegion") != 0)
-	fprintf (fp, "%s=%s\n", ppd_opt->keyword, ppd_opt->defchoice);
-
+      if (strcasecmp(ppd_opt->keyword, "PageRegion") != 0) {
+	if (ipp_printer)
+	  strncpy(buf, ppd_opt->keyword, sizeof(buf));
+	else
+	  snprintf(buf, sizeof(buf), "%s-default", ppd_opt->keyword);
+	num_options = cupsAddOption(buf, ppd_opt->defchoice,
+				    num_options, &options);
+      }
     ppdClose(ppd);
     unlink(ppdname);
   }
 
-  fclose(fp);
-  ippDelete(response);
+  httpAssembleURIf(HTTP_URI_CODING_ALL, uri, sizeof(uri), "ipp", NULL,
+		   "localhost", 0, "/printers/%s", printer);
+  resource = uri + (strlen(uri) - strlen(printer) - 10);
+  request = ippNewRequest(IPP_OP_GET_PRINTER_ATTRIBUTES);
+  ippAddString(request, IPP_TAG_OPERATION, IPP_TAG_URI, "printer-uri", NULL,
+	       uri);
+  response = cupsDoRequest(CUPS_HTTP_DEFAULT, request, resource);
 
-  return 0;
+  /* Write all supported printer attributes */
+  if (response) {
+    attr = ippFirstAttribute(response);
+    while (attr) {
+      key = ippGetName(attr);
+      for (ptr = attrs_to_record; *ptr; ptr++)
+	if (strcasecmp(key, *ptr) == 0 ||
+	    (*ptr[0] == '*' &&
+	     strcasecmp(key + strlen(key) - strlen(*ptr) + 1, *ptr + 1) == 0))
+	  break;
+      if (*ptr != NULL) {
+	if (strcasecmp(key, CUPS_BROWSED_DEST_PRINTER "-default") != 0) {
+	  ippAttributeString(attr, buf, sizeof(buf));
+	  num_options = cupsAddOption(key, buf, num_options, &options);
+	}
+      }
+      attr = ippNextAttribute(response);
+    }
+    ippDelete(response);
+  }
+
+  if (num_options > 0) {
+    fp = fopen(filename, "w+");
+    if (fp == NULL) {
+      debug_printf("ERROR: Failed creating file %s\n",
+		   filename);
+      cupsFreeOptions(num_options, options);
+      return -1;
+    }
+
+    for (i = num_options, option = options; i > 0; i --, option ++)
+      fprintf (fp, "%s=%s\n", option->name, option->value);
+
+    fclose(fp);
+    cupsFreeOptions(num_options, options);
+
+    return 0;
+  } else
+    return -1;
 }
 
 int
@@ -3712,7 +3743,7 @@ gboolean handle_cups_queues(gpointer unused) {
 		     cupsLastErrorString());
 
       /* If we are about to create a raw queue or turn a non-raw queue
-	 into a raw one, add "ppd-name=raw" option to remove any
+	 into a raw one, we apply the "ppd-name=raw" option to remove any
 	 existing PPD file assigned to the queue.
 
          Also here we do a separate IPP request as it errors in some
@@ -7174,7 +7205,8 @@ _ppdCreateFromIPP(char   *buffer,	/* I - Filename buffer */
   cupsFilePrintf(fp, "*Manufacturer: \"%s\"\n", make);
   cupsFilePrintf(fp, "*ModelName: \"%s %s\"\n", make, model);
   cupsFilePrintf(fp, "*Product: \"(%s %s)\"\n", make, model);
-  cupsFilePrintf(fp, "*NickName: \"%s %s\"\n", make, model);
+  cupsFilePrintf(fp, "*NickName: \"%s %s, cups-filters %s\"\n", make, model,
+		 VERSION);
   cupsFilePrintf(fp, "*ShortNickName: \"%s %s\"\n", make, model);
 
   if (((attr = ippFindAttribute(response, "color-supported", IPP_TAG_BOOLEAN)) != NULL && ippGetBoolean(attr, 0)) || color)
